 - (djm) [misc.c] Use CLOCK_BOOTTIME in preference to CLOCK_MONOTONIC    when it is available. It takes into account time spent suspended,    thereby ensuring timeouts (e.g. for expiring agent keys) fire    correctly. bz#2228 reported by John Haxby